fix view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ body{
 }
 
 .side-menu.inactive .top-section .toggle-menu-btn{
-    right: -50px;
+    right: 0px;
 }
 
 .side-menu .search-controller{
@@ -138,10 +138,10 @@ body{
     background: #333;
     border-radius: 5px;
     display: block;
-    margin: 20px 0;
+    margin: 0px 0;
     width: 100%;
     box-sizing: border-box;
-    padding-left: 40px;
+    padding-left: 0px;
     color: #666;
 }
 
@@ -152,8 +152,10 @@ body{
     display: block;
     font-weight: 600;
     cursor: pointer;
-    margin: 0.5rem;
-    margin-left: 50px;
+    margin: 0rem;
+    margin-left: 0px;
+  
+    
     
 }
 
@@ -165,7 +167,7 @@ body{
 
 
 .side-menu .main-menu{
-    margin: 5px 0;
+    margin: 0px 0;
     position: relative;
     max-height: 250px;
     overflow-y: scroll;
@@ -182,7 +184,10 @@ body{
     height: 40px;
     font-size: 20px;
     line-height: 40px;
-    text-align: center;
+    
+    margin-left: -90px;
+   
+    
 }
 
 .side-menu .main-menu .menu-item span{
@@ -191,6 +196,8 @@ body{
     line-height: 40px;
     opacity: 1;
     transition: opacity .2s ease-in;
+   
+    
 }
 
 .side-menu.inactive .main-menu .menu-item span{
@@ -198,14 +205,15 @@ body{
     width: 0;
     height: 0;
     overflow: hidden;
+    margin-left: -90px;
 }
 
 .side-menu .main-menu .sub-menu{
     color: rgb(255, 255, 255);
-    margin-left: 20px;
-    border-left: 1px solid #666;
+    margin-left: 0px;
+    border-left: 0px solid #666;
     box-sizing: border-box;
-    padding-left: 30px;
+    padding-left: 0px;
     max-height: 0;
     overflow: hidden;
     transition: max-height .2s ease-in;
@@ -219,13 +227,13 @@ body{
 
 .side-menu .main-menu .sub-menu a{
     display: block;
-    margin: 5px 0;
+    margin:  0;
     font-size: 15px;
     font-weight: 600;
     text-decoration: none;
     color: rgb(255, 255, 255);
     box-sizing: border-box;
-    padding: 5px;
+    padding: 0px;
 }
 
 
@@ -234,39 +242,45 @@ body{
     background: #222;
     display: block;
     
-    border-radius: 5px;
+    border-radius: 0px;
     color: #fff;
+
+}
+.side-menu .main-menu .ul{
+    
+   
 
 }
 
 .side-menu-footer{
     width: 100%;
+  
     background: #333;
     position: absolute;
     bottom: 0;
     left: 0;
-    padding: 20px;
+   
     box-sizing: border-box;
+    
 }
 
 .side-menu-footer .avatar{
-    width: 40px;
-    height: 40px;
-    overflow: hidden;
-    border-radius: 50%;
-    display: inline-block;
+    width: 20px;
+  
+    
+    border-radius: 0%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .side-menu-footer .avatar img{
     max-width: 100%;
 }
 
 .side-menu-footer .user-info{
-    display: inline-block;
-    margin: 0 10px;
-    color: #fff;
-    position: absolute;
-    opacity: 1;
-    transition: opacity .2s ease-in;
+
+   
 }
 
 .side-menu.inactive .side-menu-footer .user-info{
@@ -278,7 +292,7 @@ body{
 
 
 .side-menu-footer .user-info h5{
-    font-size: 15px;
+    font-size: 10px;
 }
 
 
@@ -289,7 +303,7 @@ body{
 .divider{
     width: 100%;
     height: 1px;
-    border-radius: 1px;
+    border-radius: 0px;
     background: #333;
 }
 .social-icon {
@@ -304,8 +318,8 @@ body{
     border-radius: 50%;
     color: #000;
     display: inline-block;
-    margin: 0.5rem;
-    padding: 0.4rem 0.6rem;
+    margin: 0rem;
+    padding: 0rem 0rem;
     font-size : 15px;
 }
 
@@ -313,14 +327,14 @@ body{
 
 
 
-.container{
+.main-container{
     margin-left: 300px;
     transition: margin-left .2s ease-in;
     padding: 50px;
     box-sizing: border-box;
 }
 
-.container.inactive{
+.main-container.inactive{
     margin-left: 80px;
 }
 
@@ -329,5 +343,9 @@ body{
      
     display: none;
 }
+
+
+
+
 
 
